--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
     </div>
     <div id="div9" style="display:none"> 
-        <h1>Width das Bordas:</h1>
+        <h1>Height:</h1>
         <div class="form-group prod1">
             <input type="text" id="height" required="required"/>
             <label for="input" class="control-label">Height</label><i class="bar"></i>
