--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         vitrine += '\n'+'</div>';
         if(document.getElementById("deprod1").value != ""){
           vitrine += '\n'+'<div width="'+document.getElementById("wprod1").value+'" style="text-align:center">';
-          vitrine += '\n'+'<span style="font-size:'+document.getElementById("sizede").value+'px;color:black;line-height:1;font-family: '+"'Montserrat'"+',sans-serif;font-weight:300;text-decoration: line-through;text-decoration-color: black;">';
+          vitrine += '\n'+'<span style="font-size:'+document.getElementById("sizede").value+'px;color:'+document.getElementById("colorpd").value+';line-height:1;font-family: '+"'Montserrat'"+',sans-serif;font-weight:300;text-decoration: line-through;text-decoration-color: black;">';
           vitrine += '\n'+'De R$'+document.getElementById("deprod1").value;
           vitrine += '\n'+'</span>';
           vitrine += '\n'+'</div>';            
@@ -336,11 +336,11 @@
         vitrine += '\n'+'<td width="'+document.getElementById("wprod1").value/2.5+'">';
         vitrine += '\n'+'</td>';
         vitrine += '\n'+'<td align="center" valign="middle" style="line-height:1">';
-        vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value/2.4+'px;text-align: left;color: #000000; margin:0 0 0 0;font-weight: 700;padding:0;">POR<br>R$';
+        vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value/2.4+'px;text-align: left;color:'+document.getElementById("colorpp").value+'; margin:0 0 0 0;font-weight: 700;padding:0;">POR<br>R$';
         vitrine += '\n'+'</p>';
         vitrine += '\n'+'</td>';
         vitrine += '\n'+'<td align="center" valign="middle" style="line-height:1">';
-        vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value+'px;text-align: left; color: #000000; margin:0;padding:0;font-weight: 700;">&nbsp;';
+        vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value+'px;text-align: left; color: '+document.getElementById("colorpp").value+'; margin:0;padding:0;font-weight: 700;">&nbsp;';
         vitrine += document.getElementById("porprod1").value;;
         vitrine += '\n'+'</p>';
         vitrine += '\n'+'</td> ';
@@ -367,7 +367,7 @@
             vitrine += '\n'+'</div>';
             if(document.getElementById("deprod2").value != ""){
               vitrine += '\n'+'<div width="'+document.getElementById("wprod2").value+'" style="text-align:center">';
-              vitrine += '\n'+'<span style="font-size:'+document.getElementById("sizede").value+'px;color:black;line-height:1;font-family: '+"'Montserrat'"+',sans-serif;font-weight:300;text-decoration: line-through;text-decoration-color: black;">';
+              vitrine += '\n'+'<span style="font-size:'+document.getElementById("sizede").value+'px;color:'+document.getElementById("colorpd").value+';line-height:1;font-family: '+"'Montserrat'"+',sans-serif;font-weight:300;text-decoration: line-through;text-decoration-color: black;">';
               vitrine += '\n'+'De R$'+document.getElementById("deprod2").value;
               vitrine += '\n'+'</span>';
               vitrine += '\n'+'</div>';              
@@ -381,11 +381,11 @@
             vitrine += '\n'+'<td width="'+document.getElementById("wprod2").value/2.5+'">';
             vitrine += '\n'+'</td>';
             vitrine += '\n'+'<td align="center" valign="middle" style="line-height:1">';
-            vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value/2.4+'px;text-align: left;color: #000000; margin:0 0 0 0;font-weight: 700;padding:0;">POR<br>R$';
+            vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value/2.4+'px;text-align: left;color:'+document.getElementById("colorpp").value+'; margin:0 0 0 0;font-weight: 700;padding:0;">POR<br>R$';
             vitrine += '\n'+'</p>';
             vitrine += '\n'+'</td>';
             vitrine += '\n'+'<td align="center" valign="middle" style="line-height:1">';
-            vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value+'px;text-align: left; color: #000000; margin:0;padding:0;font-weight: 700;">&nbsp;';
+            vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value+'px;text-align: left; color: '+document.getElementById("colorpp").value+'; margin:0;padding:0;font-weight: 700;">&nbsp;';
             vitrine += document.getElementById("porprod2").value;;
             vitrine += '\n'+'</p>';
             vitrine += '\n'+'</td> ';
@@ -413,7 +413,7 @@
               vitrine += '\n'+'</div>';
               if(document.getElementById("deprod3").value != ""){
                 vitrine += '\n'+'<div width="'+document.getElementById("wprod3").value+'" style="text-align:center">';
-                vitrine += '\n'+'<span style="font-size:'+document.getElementById("sizede").value+'px;color:black;line-height:1;font-family: '+"'Montserrat'"+',sans-serif;font-weight:300;text-decoration: line-through;text-decoration-color: black;">';
+                vitrine += '\n'+'<span style="font-size:'+document.getElementById("sizede").value+'px;color:'+document.getElementById("colorpd").value+';line-height:1;font-family: '+"'Montserrat'"+',sans-serif;font-weight:300;text-decoration: line-through;text-decoration-color: black;">';
                 vitrine += '\n'+'De R$'+document.getElementById("deprod3").value;
                 vitrine += '\n'+'</span>';
                 vitrine += '\n'+'</div>';              
@@ -427,11 +427,11 @@
               vitrine += '\n'+'<td width="'+document.getElementById("wprod3").value/2.5+'">';
               vitrine += '\n'+'</td>';
               vitrine += '\n'+'<td align="center" valign="middle" style="line-height:1">';
-              vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value/2.4+'px;text-align: left;color: #000000; margin:0 0 0 0;font-weight: 700;padding:0;">POR<br>R$';
+              vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value/2.4+'px;text-align: left;color: '+document.getElementById("colorpp").value+'; margin:0 0 0 0;font-weight: 700;padding:0;">POR<br>R$';
               vitrine += '\n'+'</p>';
               vitrine += '\n'+'</td>';
               vitrine += '\n'+'<td align="center" valign="middle" style="line-height:1">';
-              vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value+'px;text-align: left; color: #000000; margin:0;padding:0;font-weight: 700;">&nbsp;';
+              vitrine += '\n'+'<p style="font-family:'+"'Montserrat'"+', sans-serif;font-size: '+document.getElementById("sizepor").value+'px;text-align: left; color: '+document.getElementById("colorpp").value+'; margin:0;padding:0;font-weight: 700;">&nbsp;';
               vitrine += document.getElementById("porprod3").value;;
               vitrine += '\n'+'</p>';
               vitrine += '\n'+'</td> ';
