inserção imagens home

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div id='main-slider' class="splide">
         <div class="splide__track">
           <ul class="splide__list">
-            <li class="splide__slide"><img src="./img1.png"></li>
-            <li class="splide__slide"><img src="./img2.png"></li>
-            <li class="splide__slide"><img src="./img1.png"></li>
-            <li class="splide__slide"><img src="./img2.png"></li>
-            <li class="splide__slide"><img src="./img1.png"></li>
-            <li class="splide__slide"><img src="./img2.png"></li>
+            <li class="splide__slide"><img src="./imagens-home/img1.png"></li>
+            <li class="splide__slide"><img src="./imagens-home/img2.png"></li>
+            <li class="splide__slide"><img src="./imagens-home/img1.png"></li>
+            <li class="splide__slide"><img src="./imagens-home/img2.png"></li>
+            <li class="splide__slide"><img src="./imagens-home/img1.png"></li>
+            <li class="splide__slide"><img src="./imagens-home/img2.png"></li>
           </ul>
         </div>
       </div>
@@ -40,40 +40,40 @@
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img2.png">
+              <img src="./imagens-home/img2.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img2.png">
+              <img src="./imagens-home/img2.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img2.png">
+              <img src="./imagens-home/img2.png">
             </li>
             <!-- <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li>
             <li class="splide__slide">
-              <img src="./img1.png">
+              <img src="./imagens-home/img1.png">
             </li> -->
           </ul>
         </div>
@@ -84,15 +84,15 @@
            <div id="thumbnail-navigation" class="splide splide--fade splide--ltr splide--draggable is-active is-rendered is-initialized">
               <div class="splide__track" id="thumbnail-navigation-track" style="padding-left: 0px; padding-right: 0px;">
                  <ul class="splide__list" id="thumbnail-navigation-list">
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide01" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 01" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide02" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 02" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide03" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 03" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide04" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 04" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide05" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 05" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide06" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 06" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide07" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 07" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-prev" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide08" aria-hidden="true"><img src="./img1.png" alt="Slide de amostra 08" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-active is-visible" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide09" tabindex="0"><img src="./img1.png" alt="Slide de amostra 09" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide01" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 01" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide02" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 02" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide03" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 03" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide04" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 04" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide05" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 05" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide06" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 06" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide07" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 07" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-prev" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide08" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Slide de amostra 08" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-active is-visible" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 2rem; width: calc(((100% + 2rem) / 1) - 2rem); height: 371.25px; transition: opacity 400ms cubic-bezier(0.25, 1, 0.5, 1) 0s;" id="thumbnail-navigation-slide09" tabindex="0"><img src="./imagens-home/img1.png" alt="Slide de amostra 09" style="display: none;"></li>
                  </ul>
               </div>
            </div>
@@ -113,15 +113,15 @@
               </div>
               <div class="splide__track" id="thumbnails-track" style="padding-left: 0px; padding-right: 0px;">
                  <ul class="splide__list" id="thumbnails-list" role="menu" aria-orientation="horizontal" style="transform: translateX(-356px);">
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide01" aria-label="Go to slide 1" aria-controls="" role="menuitem" aria-hidden="true"><img src="./img1.png" alt="Miniatura de amostra 01" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide02" aria-label="Go to slide 2" aria-controls="" role="menuitem" aria-hidden="true"><img src="./img1.png" alt="Miniatura de amostra 02" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide03" aria-label="Go to slide 3" aria-controls="" role="menuitem" aria-hidden="true"><img src="./img1.png" alt="Miniatura de amostra 03" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide04" aria-label="Go to slide 4" aria-controls="" role="menuitem" aria-hidden="true"><img src="./img1.png" alt="Miniatura de amostra 04" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-visible" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide05" aria-label="Go to slide 5" aria-controls="" role="menuitem" tabindex="0"><img src="./img1.png" alt="Miniatura de amostra 05" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-visible" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide06" aria-label="Go to slide 6" aria-controls="" role="menuitem" tabindex="0"><img src="./img1.png" alt="Miniatura de amostra 06" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-visible" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide07" aria-label="Go to slide 7" aria-controls="" role="menuitem" tabindex="0"><img src="./img1.png" alt="Miniatura de amostra 07" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-visible is-prev" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide08" aria-label="Go to slide 8" aria-controls="" role="menuitem" tabindex="0"><img src="./img1.png" alt="Miniatura de amostra 08" style="display: none;"></li>
-                    <li class="splide__slide splide__slide--image is-visible is-active" style="background: url('./img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide09" aria-label="Go to slide 9" aria-controls="" role="menuitem" tabindex="0" aria-current="true"><img src="./img1.png" alt="Miniatura de amostra 09" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide01" aria-label="Go to slide 1" aria-controls="" role="menuitem" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 01" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide02" aria-label="Go to slide 2" aria-controls="" role="menuitem" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 02" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide03" aria-label="Go to slide 3" aria-controls="" role="menuitem" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 03" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide04" aria-label="Go to slide 4" aria-controls="" role="menuitem" aria-hidden="true"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 04" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-visible" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide05" aria-label="Go to slide 5" aria-controls="" role="menuitem" tabindex="0"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 05" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-visible" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide06" aria-label="Go to slide 6" aria-controls="" role="menuitem" tabindex="0"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 06" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-visible" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide07" aria-label="Go to slide 7" aria-controls="" role="menuitem" tabindex="0"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 07" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-visible is-prev" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide08" aria-label="Go to slide 8" aria-controls="" role="menuitem" tabindex="0"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 08" style="display: none;"></li>
+                    <li class="splide__slide splide__slide--image is-visible is-active" style="background: url('./imagens-home/img1.png') center center / cover no-repeat; margin-right: 10px; width: 104px; height: 58px;" id="thumbnails-slide09" aria-label="Go to slide 9" aria-controls="" role="menuitem" tabindex="0" aria-current="true"><img src="./imagens-home/img1.png" alt="Miniatura de amostra 09" style="display: none;"></li>
                  </ul>
               </div>
            </div>
