alteração layout vitrine

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ main.mount(window.splide.Extensions);
 thumbnails.mount();
 function vitrine(){
   var hash = window.location.hash.substring(1); //Puts hash in variable, and removes the # character7
-  // window.location.href = "https://gudinis.github.io/gerador_vitrine/" + hash;
+  // window.location.href = hash;
   window.location.href = "vitrine";      
 }
     </script>
